--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,8 +1,16 @@
 <div class="row">
-  <div class="d-flex justify-content-end">
+  <div class="d-flex justify-content-between align-items-center">
+    <h1>
+      {{
+        selectedCategory ? "Viewing results for: " + selectedCategory : "All"
+      }}
+    </h1>
     <mat-form-field>
       <mat-label>Category</mat-label>
-      <mat-select>
+      <mat-select
+        [(value)]="selectedCategory"
+        (valueChange)="getSelectedCategory()"
+      >
         @for (category of categories; track category) {
         <mat-option [value]="category">{{ category }}</mat-option>
         }
@@ -13,23 +21,34 @@
     class="col-lg-3 col-md-4 col-sm-12 mb-4"
     *ngFor="let product of products"
   >
-    <mat-card>
-      <mat-card-content class="d-flex flex-column justify-content-between" style="min-height: 350px;">
-        <div class="d-flex justify-content-center">
-          <img
-            src="{{ product.image }}"
-            style="max-width: 100%; height: 200px"
-            alt=""
-          />
-        </div>
-        <div class="d-flex flex-column justify-content-between h-100">
-          <div>
-            <mat-card-title class="fs-6">{{ formatTitle(product.title) }}</mat-card-title>
-            <mat-card-subtitle>{{ product.price }} L.E</mat-card-subtitle>
+    <div *ngIf="!isLoading">
+      <mat-card>
+        <mat-card-content
+          class="d-flex flex-column justify-content-between"
+          style="min-height: 350px"
+        >
+          <div class="d-flex justify-content-center">
+            <img
+              src="{{ product.image }}"
+              style="max-width: 100%; height: 200px"
+              alt=""
+            />
           </div>
-          <button mat-flat-button color="primary">Add to cart</button>
-        </div>
-      </mat-card-content>
-    </mat-card>
+          <div class="d-flex flex-column justify-content-between h-100">
+            <div>
+              <mat-card-title class="fs-6">{{
+                formatTitle(product.title)
+              }}</mat-card-title>
+              <mat-card-subtitle>{{ product.price }} L.E</mat-card-subtitle>
+            </div>
+            <button mat-flat-button color="primary">Add to cart</button>
+          </div>
+        </mat-card-content>
+      </mat-card>
+    </div>
   </div>
+</div>
+
+<div *ngIf="isLoading" class="absolute-center">
+  <mat-spinner></mat-spinner>
 </div>
