--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -22,29 +22,7 @@
     *ngFor="let product of products"
   >
     <div *ngIf="!isLoading">
-      <mat-card>
-        <mat-card-content
-          class="d-flex flex-column justify-content-between"
-          style="min-height: 350px"
-        >
-          <div class="d-flex justify-content-center">
-            <img
-              src="{{ product.image }}"
-              style="max-width: 100%; height: 200px"
-              alt=""
-            />
-          </div>
-          <div class="d-flex flex-column justify-content-between h-100">
-            <div>
-              <mat-card-title class="fs-6">{{
-                formatTitle(product.title)
-              }}</mat-card-title>
-              <mat-card-subtitle>{{ product.price }} L.E</mat-card-subtitle>
-            </div>
-            <button mat-flat-button color="primary">Add to cart</button>
-          </div>
-        </mat-card-content>
-      </mat-card>
+        <app-product [product]="product"></app-product>
     </div>
   </div>
 </div>
