--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -1,6 +1,6 @@
 <mat-card>
     <mat-card-content
-      class="d-flex flex-column justify-content-between"
+      class="d-flex flex-column justify-content-between alig-items-stretch"
       style="min-height: 350px"
     >
       <div  class="d-flex justify-content-center">
